# installer

./: README.md  dev.luminus.Installer.json~  dev.luminus.Misticetos.json  meson.build
data/: dev.luminus.Installer.appdata.xml.in  dev.luminus.Installer.desktop.in  dev.luminus.Installer.gresource.xml  dev.luminus.Installer.gschema.xml  dev.luminus.Misticetos.appdata.xml.in  dev.luminus.Misticetos.desktop.in  dev.luminus.Misticetos.gresource.xml  meson.build
data/icons/: meson.build
data/ui/: header.ui  location.ui  main.ui  welcome.ui  window.ui
po/: POTFILES  meson.build
src/: header.py  installer.in  location.py  main.py  meson.build  misticetos.in  welcome.py  window.py
